RG-2675 Fix modal width issue in mobile view causing UI cropping

--- a/src/dialog/dialog.css
+++ b/src/dialog/dialog.css
@@ -69,6 +69,14 @@
   }
 }
 
+.contentCloseButtonOutside {
+  max-width: calc(100dvw - var(--ring-unit) * 8);
+}
+
+.contentCloseButtonInside {
+  max-width: calc(100dvw - var(--ring-unit) * 4);
+}
+
 .content.content {
   box-shadow: var(--ring-dialog-shadow);
 }
